[tool.poetry]
name = "prj"
version = "0.1.0"
description = ""
authors = ["Alex <magwai1@yandex.ru"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build_backend = "poetry.core.masonry.api"

[tool.black]
# Максимальная длинна строки
line_length = 119
# Файлы которые не нужно форматировать
exclude ='.git'

[tool.isort]
# Максимальная длина строки
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'
